<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".SettingsActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/black"
        app:itemIconSize="25dp"
        app:itemTextAppearanceActiveBoldEnabled="false"
        app:itemIconTint="@color/black"
        app:drawerLayoutCornerSize="10dp"
        app:itemTextAppearance="@style/CustomMenuText"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_gravity="bottom"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="24dp">


                        <TextView
                            android:id="@+id/usernameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kullan_c_ad_de_i_tir"
                            android:textAlignment="center"
                            android:textColor="@color/purple_200"
                            android:textSize="36sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/usernameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableLeft="@drawable/baseline_person_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/kullan_c_ad"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />


                        <Button
                            android:id="@+id/usernameBtn"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="30dp"
                            android:backgroundTint="@color/purple_200"
                            android:text="@string/g_ncelle"
                            android:textSize="18sp"
                            app:cornerRadius="20dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/custom_edittext"
                    android:layout_gravity="bottom"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="24dp">


                        <TextView
                            android:id="@+id/loginText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ifre_de_i_tir"
                            android:textAlignment="center"
                            android:textColor="@color/purple_200"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/currentpasswordEdit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableStart="@drawable/baseline_lock_person_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/mevcut_ifre"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />

                        <EditText
                            android:id="@+id/passwordEdit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/yeni_ifre"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />

                        <EditText
                            android:id="@+id/cpasswordEdit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/yeni_ifre_tekrar"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />

                        <Button
                            android:id="@+id/passwordBtn"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="30dp"
                            android:backgroundTint="@color/purple_200"
                            android:text="@string/g_ncelle"
                            android:textSize="18sp"
                            app:cornerRadius="20dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>